<resources>
    <string name="app_name">Rogy\'s</string>
    <string name="content_description">Auth screen background</string>
    <string name="title_login">Identifícate</string>
    <string name="et_hint_email_id">E-mail</string>
    <string name="lbl_forgot_password">¿Has olvidado la contraseña?</string>
    <string name="et_hint_password">Contraseña</string>
    <string name="btn_lbl_login">Iniciar sesión</string>
    <string name="dont_have_an_account">¿No tienes una cuenta?</string>
    <string name="register">Regístrate</string>
    <string name="create_an_account">Crea una cuenta</string>
    <string name="agree_terms_conditions">Acepto los <u>Términos y Condiciones.</u></string>
    <string name="et_hint_name">Nombres</string>
    <string name="et_hint_last_name">Apellidos</string>
    <string name="et_hint_confirm_password">Confirma tu contraseña</string>
    <string name="btn_lbl_register">Registrarse</string>
    <string name="already_have_an_account">¿Ya tienes una cuenta?</string>
    <string name="please_wait">Por favor, espera&#8230;</string>
    <string name="password_forgotten">¿Has olvidado tu contraseña?</string>
    <string name="forgotten_password_info">Ingresa la dirección de correo electrónico con el que te registraste y te enviaremos un correo para reestablecer tu contraseña.</string>
    <string name="submit">Enviar</string>
    <string name="completa_tu_perfil">Completa tu perfil</string>
    <string name="phone">Número de celular</string>
    <string name="lbl_male">Hombre</string>
    <string name="lbl_female">Mujer</string>
    <string name="button_lbl_save">Guardar</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="press_back_again_to_exit">Presiona atrás nuevamente para salir</string>
    <string name="Home">Inicio</string>
    <string name="Products">Productos</string>
    <string name="Orders">Pedidos</string>
    <string name="settings">Ajustes</string>
    <string name="edit">Editar</string>
    <string name="lbl_address">Direcciones de entrega</string>
    <string name="logout">Cerrar sesión</string>
    <string name="edit_profile_title">Editar Perfil</string>
    <string name="add">Agregar</string>
    <string name="names">Nombres</string>
    <string name="profile_updated">Tu perfil ha sido actualizado con éxito</string>
    <string name="add_product">Agregar producto</string>
    <string name="access_denied">Acceso denegado</string>
    <string name="need_to_grant_access_to_perform_this_action">Necesitas permiso para realizar esta acción. Dirígete a ajustes del sistema y otorga permisos a Rogy\'s para poder continuar</string>
    <string name="imagen_anadida">La imagen se ha actualizado exitosamente</string>
    <string name="product_added">El producto ha sido añadido exitosamente</string>
    <string name="no_products">No tienes ningún producto a la venta</string>
    <string name="producto">Producto</string>
    <string name="titulo_de_la_publicacion">Título de la publicacion</string>
    <string name="precio_muestra">$2.46</string>
    <string name="nombre_del_producto">Nombre del producto</string>
    <string name="precio_del_producto">Precio del producto</string>
    <string name="descripci_n_del_producto">Descripción del producto</string>
    <string name="numero_celular">Número celular</string>
    <string name="couldnt_load_image_try_again">No se pudo cargar la imagen, inténtalo nuevamente</string>
    <string name="image_not_selected">No has seleccionado ninguna imagen, se mantendrá la que estaba antes</string>
    <string name="what_are_you_selling">¿Qué estás vendiendo?</string>
    <string name="select_image">Debes seleccionar una imagen</string>
    <string name="what_is_the_product_name">¿Cómo se llama el producto?</string>
    <string name="write_a_title">Recuerda escribir un título</string>
    <string name="is_it_free">¿Gratis?</string>
    <string name="put_the_price">Asegúrate de indicar el valor del prducto</string>
    <string name="put_description">Asegúrate de poner una descripción</string>
    <string name="product_must_have_description">El producto debe estar detallado para que el cliente no se confunda.</string>
</resources>